# test-rust-wasm-react

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: index.jsx  lib.rs
