[package]
name = "test-rust-wasm-react"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
secp256k1 = { version = "0.21.2", features = ["rand", "bitcoin_hashes"] }
rand = { version = "0.6", features = ["std", "wasm-bindgen"] }
bitcoin_hashes = { version = "0.10" }
